jwt finally works! issue was angular wasnt parsing the data correctly from when a authenticated user made a request, worked  with returning objects somehow and not strings